[package]
name = "mlc"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
repository = "https://github.com/k-nasa/mlc"
keywords = ["cli", "markdown"]
categories = ["command-line-utilities"]
description = "Markdown link checker"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.6"
