[package]
name = "lc"
version = "0.2.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
repository = "https://github.com/k-nasa/lc"
keywords = ["cli", "markdown", "link"]
categories = ["command-line-utilities"]
description = "Link checker"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.6"
tokio = { version = "0.2.16", features = ["full"] }
reqwest = "0.10.4"
anyhow = "1.0.28"
