[package]
name = "lc"
version = "0.3.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
repository = "https://github.com/k-nasa/lc"
keywords = ["cli", "markdown", "link"]
categories = ["command-line-utilities"]
description = "Link checker"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.8", features = ["derive"]}
regex = "1.6.0"
tokio = { version = "1.19.2", features = ["full"] }
reqwest = "0.11.11"
anyhow = "1.0.58"
